--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "content_aware_resize"
-version = "0.1.0"
+version = "0.2.0"
 authors = ["Koen Bolhuis <koen.bolhuis@gmail.com>"]
 edition = "2018"
 
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
 [dependencies]
-image = "0.21.2"
-copy_in_place = "0.2.0"
-clap = "2.33.0"
+image = "0.23"
